logo files added

--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
 
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
@@ -49,36 +48,33 @@
                 <a class="navbar-brand page-scroll" href="#page-top">TOGETHER WE CAN MAKE A DIFFERENCE</a>
             </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a class="page-scroll" href="#">Events</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#">Achievements</a>
+                        <a class="page-scroll" href="acheivement.html">Achievements</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#">Members</a>
+                        <a class="page-scroll" href="members.html">Members</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#">Skill Development</a>
+                        <a class="page-scroll" href="techno.html">Skill Development</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#">Contact Us</a>
+                        <a class="page-scroll" href="contact.html">Contact Us</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#">Teams Page</a>
+                        <a class="page-scroll" href="cess-teams.html">Teams Page</a>
                     </li>
-
                     <li>
-                        <a class="page-scroll" href="#">About Us</a>
+                        <a class="page-scroll" href="about.html">About Us</a>
                     </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
+           
         </div>
-        <!-- /.container-fluid -->
     </nav>
 
     <header>
