--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 	
 	</div>
 	</div>
-	<footer>
+	<!--<footer>
       <div class="cess-footer-o">
         <div class="row">
           <div class="col-md-12">
@@ -245,13 +245,12 @@
 	<h4 class="text-center" style="font-size:16px">Web Development Club</h4>		
 <h4 class="text-center" style="font-size:16px"><b>&copy; Cheerful Year-2016 </b></h4>
 	   
-          </div> <!-- /col-xs-7 -->
-
+          </div> 
          
           </div>
         </div>
 		
-    </footer>
+    </footer>-->
 	
 	<!--<div class="cess-footer-o">
 		<div class="text-center">&copy; 2016 CESS GNDU</div>
