--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		</div>
 		<div class="drop ion-navicon-round"></div>
 		<div id="clogo" style="z-index:99999" class="logo grid-col grid-col--2-of-18 grid-col--centered grid-col animated fadeInDown">
-			<img src="images/logo/logo-1.png">
+			<a href="index.html"><img src="images/logo/logo-1.png"></a>
 		</div>
 		<div class="right-nav animated fadeInDown">
 			<a href="teams.html"><h3 class="cess-btn">Teams</h3></a>
