--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:regular,semibold,italic,italicsemibold|PT+Sans:400,700,400italic,700italic|PT+Serif:400,700,400italic,700italic" rel="stylesheet" />
     <link href="styles/impress-demo.css" rel="stylesheet" />
-    
+    <link href="styles/main.css" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.png" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 </head>
@@ -22,36 +22,36 @@
 </div>
 <div id="impress">
     <div id="bored" class="step slide" data-x="-1000" data-y="-1500">
-        <q>Aren’t you just <b>bored</b> with all those slides-based presentations?</q>
+		<center><q><div> CESS </div><br><b>It's All About You</q></center>
     </div>
     <div class="step slide" data-x="0" data-y="-1500">
-        <q>Don’t you think that presentations given <strong>in modern browsers</strong> shouldn’t <strong>copy the limits</strong> of ‘classic’ slide decks?</q>
+	<q><b>Cess </b>is aimed at conducting events that are <strong>technical, creative as well as<br> literary </strong>which continually helps the students to brush up their skills in all fields.</q>
     </div>
 
     <div class="step slide" data-x="1000" data-y="-1500">
-        <q>Would you like to <strong>impress your audience</strong> with <strong>stunning visualization</strong> of your talk?</q>
+        <center><q>About US<br></q><small>Our Society was estd in August 2015</small></center><br>
+		
+CESS is a body established under the Department of Computer Enginnering and Technology, Guru Nanak Dev University, Amritsar.
     </div>
     <div id="title" class="step" data-x="0" data-y="0" data-scale="4">
-        <span class="try">then you should try</span>
-        <h1>impress.js<sup>*</sup></h1>
-        <span class="footnote"><sup>*</sup> no rhyme intended</span>
+        <span class="try">We here </span>
+        <h1> at CESS <sup>*</sup></h1>
+        <span class="footnote"><sup>*</sup>It all About You</span>
     </div>
 
     <div id="its" class="step" data-x="850" data-y="3000" data-rotate="90" data-scale="5">
-        <p>It’s a <strong>presentation tool</strong> <br/>
-        inspired by the idea behind <a href="http://prezi.com">prezi.com</a> <br/>
-        and based on the <strong>power of CSS3 transforms and transitions</strong> in modern browsers.</p>
+		<p>provide a<strong> platform </strong><br>to all the students to showcase their skills and grooming them to become all round personalities and providing them opportunities to</p>
     </div>
 
     <div id="big" class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="6">
-        <p>visualize your <b>big</b> <span class="thoughts">thoughts</span></p>
+        <p>acheive their<b>big</b> <span class="thoughts">dream</span></p>
     </div>
 
     <div id="tiny" class="step" data-x="2825" data-y="2325" data-z="-3000" data-rotate="300" data-scale="1">
-        <p>and <b>tiny</b> ideas</p>
+        <p>and <b>their</b> interests</p>
     </div>
     <div id="ing" class="step" data-x="3500" data-y="-850" data-rotate="270" data-scale="6">
-        <p>by <b class="positioning">positioning</b>, <b class="rotating">rotating</b> and <b class="scaling">scaling</b> them on an infinite canvas</p>
+        <p>by <b class="positioning"> conducting</b>, Various<b class="rotating">Events</b> and<b class="scaling">Activities</b> </p> 
     </div>
 
     <div id="imagination" class="step" data-x="6700" data-y="-300" data-scale="6">
@@ -59,19 +59,23 @@
     </div>
 
     <div id="source" class="step" data-x="6300" data-y="2000" data-rotate="20" data-scale="4">
-        <p>want to know more?</p>
-        <q><a href="http://github.com/bartaz/impress.js">use the source</a>, Luke!</q>
+        <p>Wanna Know More About Us?</p>
+        <q><a href="contact.html">Click Here</a>, Dude!</q>
     </div>
 
     <div id="one-more-thing" class="step" data-x="6000" data-y="4000" data-scale="2">
         <p>one more thing...</p>
     </div>
     <div id="its-in-3d" class="step" data-x="6200" data-y="4300" data-z="-100" data-rotate-x="-40" data-rotate-y="10" data-scale="2">
-        <p><span class="have">have</span> <span class="you">you</span> <span class="noticed">noticed</span> <span class="its">it’s</span> <span class="in">in</span> <b>3D<sup>*</sup></b>?</p>
-        <span class="footnote">* beat that, prezi ;)</span>
+        <p><span class="have">We</span> <span class="you">Are</span> <span class="noticed">always</span> <span class="its">available</span> <span class="in">for</span> <b>You<sup>* </sup> </b> !</p>
+        <span class="footnote">*It all about you ;)</span>
     </div>
-    <div id="overview" class="step" data-x="3000" data-y="1500" data-scale="10">
+	<div id="big-n" class="step big" data-x="-1500" data-y="2100" data-rotate="180" data-scale="6">
+        <p>We are<b>CESS</b><br>
+			Computer Engineering Students Society, <span class="rotating">GNDU</span><br><br>
+		<small><a href="index.html">Go To main Page</a></small></p>
     </div>
+    
 
 </div>
 
