--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 		<h3>Latest Activities</h3><hr>
 	</div>
 	
-	<a href="story.html"><div class="cess-btn grid-col grid-col--8-of-18">Read Our Story</div></a>
-	<div class="cess-btn show-news grid-col grid-col--8-of-18">Checkout Latest Activities</div>
+	<a href="tour.html"><div class="cess-btn grid-col grid-col--8-of-18">Quick Tour</div></a>
+	<div class="cess-btn show-news grid-col grid-col--8-of-18">Latest Activities</div>
 	</div>
 	</div>
 	<div class="alt-body">
@@ -123,7 +123,7 @@
 				  <img  class="rotate" src="images/icon/tactics.svg" alt="Generic placeholder image">
 				   <h3>Team Work</h3>
 				   <p class="lead"> We work in teams for successful fulfillation of various jobs,we here at
-  CESS have Technical,Literary,Placement,Promotion,Web Dev Teams.
+  CESS have Technical, Literary, Placement, Promotion, Web Dev Teams.
  </p>
 				   <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
