Teams and activities page built

--- a/tour.html
+++ b/tour.html
@@ -33,7 +33,20 @@
     <title>CESS Story</title>
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:regular,semibold,italic,italicsemibold|PT+Sans:400,700,400italic,700italic|PT+Serif:400,700,400italic,700italic" rel="stylesheet" />
     <link href="styles/impress-demo.css" rel="stylesheet" />
-    <link href="styles/main.css" rel="stylesheet">
+	<style>
+		body {
+			background-image: url(images/bg/img.jpg);
+		}
+		
+		p {
+			font-size: 24px;
+  color: #fff;
+  text-align: center;
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 600;
+  text-shadow: #460e08 4px 2px 0;
+		}
+	</style>
     <link rel="shortcut icon" href="favicon.png" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 </head>
